force-app/main/default/objects/BTN_ResourceRequest__c/BTN_ResourceRequest__c.object-meta.xml
<CustomObject>
    <label>Resource request</label>
    <nameField>
        <displayFormat>REQ{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>