force-app/main/default/objects/BTN_ResourceRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Lead, Potential, New, Trusted</inlineHelpText>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>