force-app/main/default/objects/BTN_ResourceRequest__c/fields/Account_frm__c.field-meta.xml
<CustomField>
    <fullName>Account_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.Account.Name,  CustomerAccount__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>