force-app/main/default/objects/BTN_ResourceRequest__c/fields/Amount_TM__c.field-meta.xml
<CustomField>
    <fullName>Amount_TM__c</fullName>
    <description>Placement__c * Rate__c * Contract_Logic__c * 8 * ContractDuration__c Rate__c is no longer supported as number</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>