force-app/main/default/objects/BTN_ResourceRequest__c/fields/Assigned_to_HR__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_HR__c</fullName>
    <label>Assigned to HR</label>
    <type>Date</type>
</CustomField>