force-app/main/default/objects/BTN_ResourceRequest__c/fields/AssignRequestToBucketGroup__c.field-meta.xml
<CustomField>
    <fullName>AssignRequestToBucketGroup__c</fullName>
    <formula>if (  NumberOfCVs1__c &lt; VALUE( Placement_frm__c ), 1 ,
            IF( NumberOfCVs1__c = VALUE( Placement_frm__c ) , 2,  IF( NumberOfCVs1__c &gt; VALUE( Placement_frm__c ), 3, 0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assign Request to Bucket Group</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>