force-app/main/default/objects/BTN_ResourceRequest__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>FIX</fullName>
            </value>
            <value>
                <fullName>SUP</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>Unbillable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>