force-app/main/default/objects/BTN_ResourceRequest__c/fields/Contract_Logic__c.field-meta.xml
<CustomField>
    <fullName>Contract_Logic__c</fullName>
    <description>IF( ISPICKVAL(ContractDurationUnit__c, &quot;Week(s)&quot;), 5, IF(ISPICKVAL(ContractDurationUnit__c, &quot;Month(s)&quot;), 21, 1) )

            free text fields no Contract duration unit</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Logic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>