force-app/main/default/objects/BTN_ResourceRequest__c/fields/ContractDuration__c.field-meta.xml
<CustomField>
    <fullName>ContractDuration__c</fullName>
    <label>Contract Duration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>