force-app/main/default/objects/BTN_ResourceRequest__c/fields/ContractDuration_frm__c.field-meta.xml
<CustomField>
    <fullName>ContractDuration_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, TEXT(Opportunity__r.Contract_Duration_Number__c),  ContractDuration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration</label>
    <type>Text</type>
</CustomField>