force-app/main/default/objects/BTN_ResourceRequest__c/fields/ContractDurationUnit_frm__c.field-meta.xml
<CustomField>
    <fullName>ContractDurationUnit_frm__c</fullName>
    <formula>TEXT(Opportunity__r.Contract_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration Unit</label>
    <type>Text</type>
</CustomField>