force-app/main/default/objects/BTN_ResourceRequest__c/fields/ContractStart__c.field-meta.xml
<CustomField>
    <fullName>ContractStart__c</fullName>
    <label>Contract Start</label>
    <length>80</length>
    <type>Text</type>
</CustomField>