force-app/main/default/objects/BTN_ResourceRequest__c/fields/ContractStart_frm__c.field-meta.xml
<CustomField>
    <fullName>ContractStart_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, TEXT(Opportunity__r.ContractStart__c), ContractStart__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start</label>
    <type>Text</type>
</CustomField>