force-app/main/default/objects/BTN_ResourceRequest__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>