force-app/main/default/objects/BTN_ResourceRequest__c/fields/CVsAllInFinal__c.field-meta.xml
<CustomField>
    <fullName>CVsAllInFinal__c</fullName>
    <formula>TEXT(NumberOfCVs__c) + &apos;/&apos; + TEXT(FinalCandidates__c)</formula>
    <label>CVs All / in Final</label>
    <type>Text</type>
</CustomField>