force-app/main/default/objects/BTN_ResourceRequest__c/fields/CVsApprovedRequested__c.field-meta.xml
<CustomField>
    <fullName>CVsApprovedRequested__c</fullName>
    <formula>IF (
  RecordType.DeveloperName = &apos;Auto&apos;,
  (TEXT(NumberOfCVsApproved__c)+ &apos;/&apos; + Placement_frm__c),
  (TEXT(NumberOfCVsApproved__c)+ &apos;/&apos; + TEXT(Placement__c))
)</formula>
    <label>CVs Approved / Requested</label>
    <type>Text</type>
</CustomField>