force-app/main/default/objects/BTN_ResourceRequest__c/fields/CVsReceivedRequested__c.field-meta.xml
<CustomField>
    <fullName>CVsReceivedRequested__c</fullName>
    <formula>IF( RecordType.DeveloperName  = &apos;Auto&apos;,
            (TEXT(NumberOfCVs__c)+ &apos; / &apos; + TEXT(FinalCandidates__c) + &apos; / &apos; + Placement_frm__c),
            IF( true ,
            (TEXT(NumberOfCVs__c)+ &apos; / &apos; + TEXT(FinalCandidates__c) + &apos; / &apos; + TEXT( Placement__c )),
            &apos; &apos;
            )
            )</formula>
    <label>CVs Received / CVs in Final / Requested</label>
    <type>Text</type>
</CustomField>