force-app/main/default/objects/BTN_ResourceRequest__c/fields/DeliveryDeadline__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeadline__c</fullName>
    <label>Delivery deadline</label>
    <type>Date</type>
</CustomField>