force-app/main/default/objects/BTN_ResourceRequest__c/fields/DeliveryDeadline_frm__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeadline_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.CloseDate,  DeliveryDeadline__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery deadline</label>
    <type>Date</type>
</CustomField>