force-app/main/default/objects/BTN_ResourceRequest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>