force-app/main/default/objects/BTN_ResourceRequest__c/fields/FinalCandidates__c.field-meta.xml
<CustomField>
    <fullName>FinalCandidates__c</fullName>
    <description>Candidates in final Stage. More info BRITCRM-354.</description>
    <label>Final Candidates</label>
    <summaryFilterItems>
        <field>BTN_CV__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted to external, Approved by external, Contract signed, Rejected by external, Not Interested, Offer expired</value>
    </summaryFilterItems>
    <summaryForeignKey>BTN_CV__c.ResourceRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>