force-app/main/default/objects/BTN_ResourceRequest__c/fields/ImportCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ImportCreatedDate__c</fullName>
    <label>Import Created Date</label>
    <type>DateTime</type>
</CustomField>