force-app/main/default/objects/BTN_ResourceRequest__c/fields/Language_frm__c.field-meta.xml
<CustomField>
    <fullName>Language_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, TEXT( Opportunity__r.CVLanguage__c ), TEXT(Language__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>