force-app/main/default/objects/BTN_ResourceRequest__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Junior, Professional, Senior</inlineHelpText>
    <label>.Experience Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>