force-app/main/default/objects/BTN_ResourceRequest__c/fields/Level_frm__c.field-meta.xml
<CustomField>
    <fullName>Level_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.Level__c, Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Level</label>
    <type>Text</type>
</CustomField>