force-app/main/default/objects/BTN_ResourceRequest__c/fields/Location_frm__c.field-meta.xml
<CustomField>
    <fullName>Location_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, TEXT(Opportunity__r.Location__c), TEXT(Location__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>