force-app/main/default/objects/BTN_ResourceRequest__c/fields/MainSkills__c.field-meta.xml
<CustomField>
    <fullName>MainSkills__c</fullName>
    <label>Main Skills</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>