force-app/main/default/objects/BTN_ResourceRequest__c/fields/NumberOfCVs1__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCVs1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of CVs 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>