force-app/main/default/objects/BTN_ResourceRequest__c/fields/NumberOfCVs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCVs__c</fullName>
    <label>Number of CVs</label>
    <summaryForeignKey>BTN_CV__c.ResourceRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>