force-app/main/default/objects/BTN_ResourceRequest__c/fields/NumberOfCVsApproved__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCVsApproved__c</fullName>
    <label>Number of CVs Approved</label>
    <summaryFilterItems>
        <field>BTN_CV__c.Status__c</field>
        <operation>equals</operation>
        <value>Contract signed, Approved by external, Contract signed</value>
    </summaryFilterItems>
    <summaryForeignKey>BTN_CV__c.ResourceRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>