force-app/main/default/objects/BTN_ResourceRequest__c/fields/Only_for_RA__c.field-meta.xml
<CustomField>
    <fullName>Only_for_RA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Only for RA</label>
    <type>Checkbox</type>
</CustomField>