force-app/main/default/objects/BTN_ResourceRequest__c/fields/OpenCandidates__c.field-meta.xml
<CustomField>
    <fullName>OpenCandidates__c</fullName>
    <label>Open Candidates</label>
    <summaryFilterItems>
        <field>BTN_CV__c.Status__c</field>
        <operation>equals</operation>
        <value>Open, Submitted to external, Interview-in-progress</value>
    </summaryFilterItems>
    <summaryForeignKey>BTN_CV__c.ResourceRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>