force-app/main/default/objects/BTN_ResourceRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>