force-app/main/default/objects/BTN_ResourceRequest__c/fields/OpportunityName_frm__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName_frm__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>