force-app/main/default/objects/BTN_ResourceRequest__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed price</fullName>
            </value>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>