force-app/main/default/objects/BTN_ResourceRequest__c/fields/OpportunityType_frm__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType_frm__c</fullName>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>