force-app/main/default/objects/BTN_ResourceRequest__c/fields/OtherLocation_frm__c.field-meta.xml
<CustomField>
    <fullName>OtherLocation_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.OtherLocation__c, OtherLocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Location</label>
    <type>Text</type>
</CustomField>