force-app/main/default/objects/BTN_ResourceRequest__c/fields/Placement_frm__c.field-meta.xml
<CustomField>
    <fullName>Placement_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, TEXT( Opportunity__r.Placement__c ), TEXT( Placement__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>