force-app/main/default/objects/BTN_ResourceRequest__c/fields/Position_frm__c.field-meta.xml
<CustomField>
    <fullName>Position_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.Name,  Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Name</label>
    <type>Text</type>
</CustomField>