force-app/main/default/objects/BTN_ResourceRequest__c/fields/Previous_Rank__c.field-meta.xml
<CustomField>
    <fullName>Previous_Rank__c</fullName>
    <description>Stores previous value of Rank after field update. Created for PB and Email Alert</description>
    <label>Previous Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0:$</fullName>
            </value>
            <value>
                <fullName>1:bardzo ważne</fullName>
            </value>
            <value>
                <fullName>2:ważne</fullName>
            </value>
            <value>
                <fullName>3:w wolnej chwili</fullName>
            </value>
            <value>
                <fullName>4:bez szans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>