force-app/main/default/objects/BTN_ResourceRequest__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Stores previous status after field update. Created for PB and Email Alert</description>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Waiting for client</fullName>
            </value>
            <value>
                <fullName>On shelf</fullName>
            </value>
            <value>
                <fullName>Closed - Success</fullName>
            </value>
            <value>
                <fullName>Closed - Failure</fullName>
            </value>
            <value>
                <fullName>Opportunity Closed</fullName>
            </value>
            <value>
                <fullName>Closed - We resign</fullName>
            </value>
            <value>
                <fullName>Closed - Blood in the sand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>