force-app/main/default/objects/BTN_ResourceRequest__c/fields/Priority_frm__c.field-meta.xml
<CustomField>
    <fullName>Priority_frm__c</fullName>
    <formula>TEXT(Opportunity__r.Priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>