force-app/main/default/objects/BTN_ResourceRequest__c/fields/Rate_frm__c.field-meta.xml
<CustomField>
    <fullName>Rate_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;,  TEXT(Opportunity__r.CurrencyIsoCode) + &apos; &apos; + TEXT(Opportunity__r.Rate__c),  Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Rate</label>
    <type>Text</type>
</CustomField>