force-app/main/default/objects/BTN_ResourceRequest__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>.Requestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>