force-app/main/default/objects/BTN_ResourceRequest__c/fields/Requestor_frm__c.field-meta.xml
<CustomField>
    <fullName>Requestor_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.Owner.FirstName + &apos; &apos; + Opportunity__r.Owner.LastName,   RequestorUser__r.FirstName + &apos; &apos; + RequestorUser__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>