force-app/main/default/objects/BTN_ResourceRequest__c/fields/RequestorContact__c.field-meta.xml
<CustomField>
    <fullName>RequestorContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>.Requestor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Id</field>
            <operation>equals</operation>
            <value>Current User: Contact ID</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Requests (Requestor)</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>