force-app/main/default/objects/BTN_ResourceRequest__c/fields/RequestorEmail_frm__c.field-meta.xml
<CustomField>
    <fullName>RequestorEmail_frm__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Auto&apos;, Opportunity__r.Owner.Email, RequestorUser__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Email</label>
    <type>Text</type>
</CustomField>