force-app/main/default/objects/BTN_ResourceRequest__c/fields/RequestorUser__c.field-meta.xml
<CustomField>
    <fullName>RequestorUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>.Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>