force-app/main/default/objects/BTN_ResourceRequest__c/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Name_frm__c</field>
            <operation>contains</operation>
            <value>Codello</value>
        </filterItems>
        <filterItems>
            <field>Contact.Name_frm__c</field>
            <operation>contains</operation>
            <value>Łukaszewski</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Resource_Requests_RM</relationshipName>
    <type>Lookup</type>
</CustomField>