force-app/main/default/objects/BTN_ResourceRequest__c/fields/ResponsiblePerson_frm__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson_frm__c</fullName>
    <formula>MainRM__r.Name_frm__c + IF(ISBLANK(Main_Recruiter__c ) || ISBLANK(MainRM__c ),  &apos;&apos;, &apos; / &apos;) + Main_Recruiter__r.Name_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible Person</label>
    <type>Text</type>
</CustomField>