force-app/main/default/objects/BTN_ResourceRequest__c/fields/Secondary_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Recruiter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Resource_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>