force-app/main/default/objects/BTN_ResourceRequest__c/fields/SecondarySkills__c.field-meta.xml
<CustomField>
    <fullName>SecondarySkills__c</fullName>
    <label>Secondary Skills</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>