force-app/main/default/objects/BTN_ResourceRequest__c/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <inlineHelpText>Junior, Professional, Senior</inlineHelpText>
    <label>Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>