force-app/main/default/objects/BTN_ResourceRequest__c/fields/SignedCandidates__c.field-meta.xml
<CustomField>
    <fullName>SignedCandidates__c</fullName>
    <description>Number of Candidate in Contract Signed Status</description>
    <label>Signed Candidates</label>
    <summaryFilterItems>
        <field>BTN_CV__c.Status__c</field>
        <operation>equals</operation>
        <value>Contract signed</value>
    </summaryFilterItems>
    <summaryForeignKey>BTN_CV__c.ResourceRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>