force-app/main/default/objects/BTN_ResourceRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Waiting for client</fullName>
            </value>
            <value>
                <fullName>On shelf</fullName>
            </value>
            <value>
                <fullName>Closed - Success</fullName>
            </value>
            <value>
                <fullName>Closed - Failure</fullName>
            </value>
            <value>
                <fullName>Opportunity Closed</fullName>
            </value>
            <value>
                <fullName>Closed - We resign</fullName>
            </value>
            <value>
                <fullName>Closed - Blood in the sand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>