force-app/main/default/objects/BTN_ResourceRequest__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>TextArea</type>
</CustomField>