force-app/main/default/objects/BTN_ResourceRequest__c/fields/ZohoUrl__c.field-meta.xml
<CustomField>
    <fullName>ZohoUrl__c</fullName>
    <label>ZOHO Url</label>
    <type>Url</type>
</CustomField>