force-app/main/default/objects/BTN_ResourceRequest__c/fields/ZOHOUrl_frm__c.field-meta.xml
<CustomField>
    <fullName>ZOHOUrl_frm__c</fullName>
    <formula>IF(ISBLANK(ZohoUrl__c), &apos;&apos;, HYPERLINK(ZohoUrl__c, &apos;Link&apos;))</formula>
    <label>ZOHO</label>
    <type>Text</type>
</CustomField>