force-app/main/default/objects/BTN_ResourceRequest__c/recordTypes/Auto.recordType-meta.xml
<RecordType>
    <fullName>Auto</fullName>
    <active>true</active>
    <description>Automatic resource request</description>
    <label>Auto</label>
</RecordType>