force-app/main/default/objects/BTN_ResourceRequest__c/recordTypes/Manual.recordType-meta.xml
<RecordType>
    <fullName>Manual</fullName>
    <active>true</active>
    <description>Manual resource request</description>
    <label>Manual</label>
</RecordType>