force-app/main/default/objects/BTN_ResourceRequest__c/validationRules/vContractStart.validationRule-meta.xml
<ValidationRule>
    <fullName>vContractStart</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  ContractStart__c )</errorConditionFormula>
    <errorDisplayField>ContractStart__c</errorDisplayField>
    <errorMessage>Please set Contract Start</errorMessage>
</ValidationRule>