force-app/main/default/objects/BTN_ResourceRequest__c/validationRules/vCustomer.validationRule-meta.xml
<ValidationRule>
    <fullName>vCustomer</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(CustomerAccount__c)</errorConditionFormula>
    <errorDisplayField>CustomerAccount__c</errorDisplayField>
    <errorMessage>Please set Customer</errorMessage>
</ValidationRule>