force-app/main/default/objects/BTN_ResourceRequest__c/validationRules/vDeadline.validationRule-meta.xml
<ValidationRule>
    <fullName>vDeadline</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( DeliveryDeadline__c )</errorConditionFormula>
    <errorDisplayField>DeliveryDeadline__c</errorDisplayField>
    <errorMessage>Please set Delivery Deadline</errorMessage>
</ValidationRule>